fixed some integer creation code